# b2k-protrack

./: .gitattributes  .gitignore  CODEOWNERS  CONTRIBUTING.md  README.md
apps/ai/: .dockerignore  .env.example  Dockerfile  pyproject.toml
apps/ai/app/: main.py
apps/ai/app/api/: deps.py
apps/ai/app/api/routes/: analyze.py  assistant.py  health.py  preflight.py
apps/ai/app/core/: config.py  errors.py  logging.py  metrics.py  observability.py  security.py
apps/ai/app/orchestration/: analysis_orchestrator.py  assistant_orchestrator.py  pipeline.py  preflight_orchestrator.py  progress.py
apps/ai/app/parsers/: base.py  docx_parser.py  factory.py  models.py  pdf_parser.py
apps/ai/app/preflight/: models.py  registry.py  runner.py  scoring.py
apps/ai/app/preflight/checks/: accessibility.py  font_embedding.py  geometry.py  image_resolution.py  overflow.py  placement.py
apps/ai/app/prompts/: registry.py
apps/ai/app/providers/: base.py  claude_provider.py  gemini_provider.py  metered.py  mock_provider.py  retry.py  router.py
apps/ai/app/schemas/: analysis.py  assistant.py  common.py  internal.py  preflight.py
apps/ai/app/services/: normalizer.py  preflight_normalizer.py
apps/ai/app/storage/: file_loader.py
apps/ai/tests/: conftest.py  test_analyze.py  test_assistant.py  test_gemini_smoke.py  test_health.py  test_metered_provider.py  test_metrics.py  test_normalizer.py  test_parsers.py  test_pdf_facts.py  test_preflight.py  test_preflight_checks.py  test_preflight_normalizer.py  test_prompts.py  test_providers.py
docs/: IMPLEMENTATION_ROADMAP.md
(+482 files in other folders)
