[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "protrack-ai"
version = "0.1.0"
description = "Protrack AI Service — FastAPI, Claude integration (stateless)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "httpx>=0.27",
    "tenacity>=8.3",
    "prometheus-fastapi-instrumentator>=7.0",
    "prometheus-client>=0.20",
    "jinja2>=3.1",
    "anthropic>=0.39",
    "python-docx>=1.1",
    "pdfplumber>=0.11",
    "pypdf>=4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008 is FastAPI's intended dependency-injection idiom (`param = Depends(...)`), not a bug.
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
